# 520_assignment

./: 10_c1_a3_tests.py  20_c3_a3_tests.py  README.md  assignment_3_test_gen.py  cov_all_qwen.xml  eval.py  failure_evals.py  gemma_fail_cases.jsonl  generated_manifest_qwen.json  llm_coverage_improvement.py  main.py  mlx_humaneval_structured.py  pyproject.toml  pytest_all.xml  samples_cot_structured_gemma.jsonl  samples_cot_structured_gemma.jsonl_results.jsonl  samples_cot_structured_qwen.jsonl_results.jsonl  samples_custom_structured_gemma.jsonl  samples_custom_structured_gemma.jsonl_results.jsonl  samples_custom_structured_qwen.jsonl  samples_edit_structured_gemma.jsonl_results.jsonl  samples_edit_structured_qwen.jsonl  samples_edit_structured_qwen.jsonl_results.jsonl  save_humaneval.py  specs_1.py  test_humaneval.py
generated_cot_qwen/: 0__c3.py  10__c1.py  10__c2.py  10__c3.py  10_c1_bug.py  20__c1.py  20__c2.py  20__c3.py  20__c3_bug.py  40__c1.py  50__c1.py  50__c2.py  60__c1.py  60__c3.py  70__c1.py  70__c2.py  70__c2_bug.py  70__c3.py  80__c1.py  90__c1.py  90__c3.py
results/: samples_cot_structured_qwen.jsonl  samples_custom_structured_qwen.jsonl_results.jsonl  samples_edit_structured_gemma.jsonl
