[project]
name = "cot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.2.0",
    "human-eval>=1.0.3",
    "mlx>=0.29.3",
    "mlx-lm>=0.28.3",
    "outlines>=1.2.7",
    "pydantic>=2.12.3",
    "pytest>=9.0.0",
]
